tixChangeHelm/templates/tix_namespace_v1_v2.yaml
# ------------------- Create Namespace used for TixChange  ------------------- #

apiVersion: v1
kind: Namespace
metadata:
  name: tixchange

---
apiVersion: v1
kind: Namespace
metadata:
  name: tixchange-v2
