tixChangeHelm/templates/tix_ingress.yml
#---
#apiVersion: v1
#kind: Service
#metadata:
  #name: tixchange-lb
  #namespace: tixchange
#spec:
  #selector:
    #k8s-app: tixchange-ingress-lb
  #ports:
  #- name: web
    #port: 80
    #targetPort: 8080
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: tixchange-ingress
  namespace: tixchange
  annotations:
    ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - http:
       paths:
         - path: /
           backend:
             serviceName: webportal-svc
             servicePort: 8080
