tixChangeHelm/templates/tix_ingress_v1.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tixchange-ingress
  namespace: tixchange-v1
  annotations:
    ingress.kubernetes.io/rewrite-target: /
    #nginx.ingress.kubernetes.io/ssl-redirect: "false"
    #nginx.org/server-snippet: "proxy_ssl_verify off;"
spec:
  rules:
    - host: uc1.jtixchange.com
      http:
       paths:
         - path: /
           pathType: Prefix
           backend:
             #serviceName: webportal-svc
             service:
               name: bpa-svc
               port: 
                 number: 8080
    #- host: uc2.jtixchange.com
      #http:
       #paths:
         #- path: /
           #backend:
             #serviceName: webportal-svc-v2
             #servicePort: 80
