tixChangeHelm/templates/tix_ingress_v2.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tixchange-ingress
  namespace: tixchange-v2
  annotations:
    ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: "nginx"
    #nginx.ingress.kubernetes.io/ssl-redirect: "false"
    #nginx.org/server-snippet: "proxy_ssl_verify off;"
spec:
  rules:
    - host: uc2.jtixchange.com
      http:
       paths:
         - path: /
           pathType: Prefix
           backend:
             service:
               name: webportal-svc
             #serviceName: bpa-svc
               port: 
                 number: 8080
